<resources>
    <string name="app_name">PROJECT ONE</string>
    <string name="menu_settings">Menu</string>
    <string name="start_button_text">Start</string>
    <string name="first_player">Player #1</string>
    <string name="second_player">Player #2</string>
    <string name="select_picture">Select Picture</string>
    <string name="enter_name">Enter Name</string>
    
    <string name="menu_play_time">Play Time</string>
    <string name="menu_reset">Reset</string>
    <string name="submenu_one">One Second</string>
    <string name="submenu_two">Two Seconds</string>
    <string name="submenu_five">Five Seconds</string>
    <string name="submenu_ten">Ten Seconds</string>
    
    
    <dimen name="table_button">100dp</dimen>
    <dimen name="button_size">60dp</dimen>
    <dimen name="progress_bar_height">20dp</dimen>
    <dimen name="progress_bar_width">300dp</dimen>
    <dimen name="start_button_width">125dp</dimen>
    <dimen name="start_button_height">125dp</dimen>
    <dimen name="gap">50dp</dimen>
    <dimen name="half_gap">30dp</dimen>
    <dimen name="name_text_size">30sp</dimen>
    <dimen name="bottom_pad">5dp</dimen>
    <dimen name="top_pad">20dp</dimen>
    
    <dimen name="main_imageview">50dp</dimen>
    
    
    
    
    <integer name="max_score">0</integer>
    <integer name="bar_time">5000</integer>
    <integer name="bar_click_time">100</integer>
</resources>
